--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" rel="stylesheet" crossorigin="anonymous">
   <title>Swagger2TypeScript</title>
+  <style>
+    * {
+      transition: all .3s;
+    }
+  </style>
 </head>
 <body>
-  <div id="app"></div>
+  <div class="overflow-hidden" id="app"></div>
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
